data/derived/comb/progs/unify/prog7932.ml.out
Characters 29-37:
  let fixpoint (f,b) = wwhile ((helper), b);;
                               ^^^^^^^^
Error: This expression has type ('a -> 'a) * 'a -> 'a * bool
       but an expression was expected of type
         ('a -> 'a) * 'a -> (('a -> 'a) * 'a) * bool
       The type variable 'a occurs inside ('a -> 'a) * 'a
